# test_project1

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  requirements.txt
dit/qa/pages/main_page/: __init__.py
dit/qa/pages/main_page/component/: header.py  main.py  sidebar.py
dit/qa/pages/start_page/: __init__.py
tests/: conftest.py  options.py  steps.py  test_authorization.py  test_authorization.yaml  test_check_agent.py  test_check_agent.yaml  test_check_connection_lead_agent.py  test_check_connection_lead_agent.yaml  test_create_agent.py  test_create_agent.yaml  test_create_lead.py  test_create_lead.yaml  test_open_account_page.py  test_open_account_page.yaml  test_start_page.py  test_start_page.yaml
